--- a/iMage/jmjrst.main/pom.xml
+++ b/iMage/jmjrst.main/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>swt1.ub1.a2</groupId>
-  <artifactId>2291287</artifactId>
+  <groupId>swt1.ub3.a1</groupId>
+  <artifactId>jmjrst</artifactId>
 
   <dependencies>
     <dependency>
