--- a/iMage/jmjrst.main/pom.xml
+++ b/iMage/jmjrst.main/pom.xml
@@ -11,6 +11,7 @@
 
   <groupId>swt1.ub3.a1</groupId>
   <artifactId>jmjrst</artifactId>
+  <version>0.1.0-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
