--- a/iMage/pom.xml
+++ b/iMage/pom.xml
@@ -7,6 +7,7 @@
         <module>jmjrst.main</module>
         <module>iMage.mosaique</module>
         <module>iMage.mosaique.cli</module>
+        <module>iMage.JavaCrashCourse-plugin</module>
     </modules>
 
     <dependencies>
