--- a/iMage/iMage.bundle/pom.xml
+++ b/iMage/iMage.bundle/pom.xml
@@ -9,9 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>swt1.ub3.a2</groupId>
-    <artifactId>iMage.JavaCrashCourse-plugin</artifactId>
+    <groupId>swt1.ub3.a3</groupId>
+    <artifactId>iMage.bundle</artifactId>
     <version>0.1.0-SNAPSHOT</version>
+
     <dependencies>
         <dependency>
             <groupId>swt1.ub3.a1</groupId>
@@ -21,12 +22,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.kohsuke.metainf-services</groupId>
-            <artifactId>metainf-services</artifactId>
-            <version>1.8</version>
-            <optional>true</optional>
+            <groupId>swt1.ub3.a2</groupId>
+            <artifactId>iMage.JavaCrashCourse-plugin</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
-
-
 </project>
