--- a/iMage/pom.xml
+++ b/iMage/pom.xml
@@ -8,6 +8,7 @@
         <module>iMage.mosaique</module>
         <module>iMage.mosaique.cli</module>
         <module>iMage.JavaCrashCourse-plugin</module>
+        <module>iMage.bundle</module>
     </modules>
 
     <dependencies>
