--- a/iMage/iMage.bundle/pom.xml
+++ b/iMage/iMage.bundle/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>swt1.ub3.a3</groupId>
-    <artifactId>iMage.bundle</artifactId>
+    <artifactId>iMage.Bundle</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
     <dependencies>
