--- a/iMage/iMage.iTiler/pom.xml
+++ b/iMage/iMage.iTiler/pom.xml
@@ -9,27 +9,33 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>swt1.ub3.a3</groupId>
-    <artifactId>iMage.Bundle</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <groupId>swt1.ub4.a1</groupId>
+    <artifactId>iMage.iTiler</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>swt1.ub3.a1</groupId>
-            <artifactId>jmjrst</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>swt1.ub3.a2</groupId>
-            <artifactId>iMage.JavaCrashCourse-plugin</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
+
     <build>
-        <plugins>
+        <plugins><plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <classpathPrefix>lib/</classpathPrefix>
+                        <classpathLayoutType>repository</classpathLayoutType>
+                        <useUniqueVersions>false</useUniqueVersions>
+                        <mainClass>Main</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -48,22 +54,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <classpathLayoutType>repository</classpathLayoutType>
-                            <useUniqueVersions>false</useUniqueVersions>
-                            <mainClass>App</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
             </plugin>
 
             <plugin>
