--- a/iMage/iMage.iTiler/pom.xml
+++ b/iMage/iMage.iTiler/pom.xml
@@ -17,6 +17,16 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>swt1</groupId>
+            <artifactId>iMage.mosaique</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>swt1</groupId>
+            <artifactId>iMage.mosaique.cli</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -30,7 +40,7 @@
                         <classpathPrefix>lib/</classpathPrefix>
                         <classpathLayoutType>repository</classpathLayoutType>
                         <useUniqueVersions>false</useUniqueVersions>
-                        <mainClass>Main</mainClass>
+                        <mainClass>GUI</mainClass>
                     </manifest>
                 </archive>
             </configuration>
