Ub 4 A1b letzte Fehlerbehebungen und Kommentare hinzugefuegt

--- a/iMage/iMage.iTiler/pom.xml
+++ b/iMage/iMage.iTiler/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>swt1.ub4.a1</groupId>
-    <artifactId>iMage.iTiler</artifactId>
+    <artifactId>2291287</artifactId>
 
     <dependencies>
         <dependency>
