--- a/iMage/iMage.mosaique.parallel/pom.xml
+++ b/iMage/iMage.mosaique.parallel/pom.xml
@@ -2,21 +2,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>swt1.ub6.a1</groupId>
+    <artifactId>iMage.mosaique.parallel</artifactId>
+
     <parent>
         <artifactId>iMage</artifactId>
         <groupId>swt1</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>swt1.ub6.a1</groupId>
-    <artifactId>iMage.mosaique.parallel</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>swt1</groupId>
             <artifactId>iMage.mosaique</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>swt1.ub5.a4</groupId>
+            <artifactId>iMage.mosaique</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
